@@ -23,5 +23,7 @@ class Net::SSLeay::X509_VERIFY_PARAM {
   
   native method set1_host : int ($name : string, $namelen : int = 0);
   
+  native method set_flags : int ($flags : long);
+  
   native method DESTROY : void ();
 }
