@@ -12,6 +12,7 @@
     * Add Net::SSLeay::X509#digest method.
     * Add Net::SSLeay::X509#pubkey_digest method.
     * Add Net::SSLeay#get_certificate method.
+    * Add Net::SSLeay::X509_VERIFY_PARAM#set_flags method.
 0.010 2024-11-11
   [New Features]
     * Add Net::SSLeay::BIO#new_file method.
